added main page stuff

--- a/css/login-style.css
+++ b/css/login-style.css
@@ -29,7 +29,8 @@
 }
 
 .split-left h1 {
-  font-family: "Poppins Bold";
+  font-family: "Poppins";
+  font-weight: bold;
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   text-align: center;
@@ -67,7 +68,8 @@
 }
 
 .split-right h2 {
-  font-family: "Poppins Bold";
+  font-family: "Poppins";
+  font-weight: bold;
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   text-align: center;
@@ -85,7 +87,7 @@
 }
 
 input {
-  font-family: "Poppins Regular";
+  font-family: "Poppins";
   padding: 25px;
   font-size: 18px;
   border-radius: 45px;
@@ -101,11 +103,12 @@ input {
   text-align: left;
   padding-left: 70px;
   color: black;
-  font-family: "Poppins Regular";
+  font-family: "Poppins";
 }
 
 .login-container button {
-  font-family: "Poppins Bold";
+  font-family: "Poppins";
+  font-weight: bold;
   background-color: #a58fcb;
   color: white;
   border: black 2px solid;
@@ -125,7 +128,7 @@ input {
 .split-right h3,
 .split-right a {
   color: white;
-  font-family: "Poppins Regular";
+  font-family: "Poppins";
   font-size: 16px;
 }
 
