--- a/css/login-style.css
+++ b/css/login-style.css
@@ -1,3 +1,5 @@
+@import url('common.css');
+
 @font-face {
   font-family: "Poppins Bold";
   font-weight: 700;
@@ -41,7 +43,6 @@
 .split-left img {
   display: block;
   margin: 0 auto;
-
   width: 250px;
   height: 250px;
   object-fit: cover;
