Added the HTML/CSS for Settings Page + Added Responsive Styling

--- a/css/forgot-reset-password-style.css
+++ b/css/forgot-reset-password-style.css
@@ -1,6 +1,6 @@
 @import url('common.css');
 
-nav{
+nav {
     position: fixed;
     top: 0;
     left: 0;
@@ -12,30 +12,27 @@ nav{
     border-bottom: 3px solid white;
 }
 
-nav img{
-    width: 50px;
-    height: 50px;
+nav img {
+    width: 65px;
+    height: auto;
     padding-top: 5px;
     padding-left: 20px;
+    object-fit: contain;
 }
 
-/* Override split-left and split-right for this page due to nav bar */
-.split-left{
+.split-left {
     top: 60px;
     height: calc(100vh - 60px);
 }
 
-.split-right{
+.split-right {
     top: 60px;
     height: calc(100vh - 60px);
 }
 
-.split-right h2{
-    font-size: 36px;
-}
-
-.forgot-password-container{
-    width: 750px;
+.forgot-password-container {
+    width: 90%;
+    max-width: 750px;
     padding: 45px;
     background-color: #ececec;
     border-radius: 45px;
@@ -46,7 +43,7 @@ nav img{
     align-items: center;
 }
 
-input{
+input {
     font-family: "Poppins Regular";
     padding: 25px;
     font-size: 18px;
@@ -58,7 +55,7 @@ input{
     outline: none;
 }
 
-#email-input, #new-password-input, #confirm-password-input{
+#email-input, #new-password-input, #confirm-password-input {
     display: block;
     text-align: left;
     padding-left: 70px;
@@ -66,29 +63,51 @@ input{
     font-family: "Poppins Regular";
 }
 
-#new-password-input, #confirm-password-input{
+#new-password-input, #confirm-password-input {
     display: none; /* hide these input fields initially */
     margin-top: 20px;
 }
 
-.forgot-password-container button{
-    font-family: "Poppins Bold";
-    background-color: #a58fcb;
-    color: white;
-    border: black 2px solid;
-    padding: 15px 30px;
-    border-radius: 25px;
-    cursor: pointer;
-    font-size: 18px;
-    margin-top: 10px;
-    display: inline-block;
-}
-
-.forgot-password-container button:hover{
-    transform: scale(1.02);
-    transition: 0.3s ease-in-out;
-}
-
-#new-password-btn{
+#new-password-btn {
     display: none; /* hide this button initially */
+}
+
+/* Responsive adjustments */
+@media screen and (max-width: 1024px) {
+    .forgot-password-container {
+        padding: 35px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .forgot-password-container {
+        padding: 30px 20px;
+        width: 95%;
+    }
+    
+    #email-input, #new-password-input, #confirm-password-input {
+        padding-left: 35px;
+    }
+    
+    .split-left, .split-right {
+        height: auto;
+        min-height: calc(100vh - 60px);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .forgot-password-container {
+        padding: 25px 15px;
+        border-radius: 30px;
+    }
+    
+    #email-input, #new-password-input, #confirm-password-input {
+        padding-left: 25px;
+    }
+    
+    nav img {
+        padding-left: 10px;
+        width: 45px; /* Slightly smaller on mobile */
+        height: 45px;
+    }
 }
