--- a/css/common.css
+++ b/css/common.css
@@ -10,6 +10,13 @@
   src: url("/assets/fonts/Poppins-Regular.ttf") format("truetype");
 }
 
+/* Reset for better responsive behavior */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   width: 100%;
 }
@@ -37,6 +44,7 @@
   text-align: center;
   font-size: 48px;
   line-height: 1.3;
+  padding: 0 15px;
 }
 
 .split-left img {
@@ -45,6 +53,7 @@
   width: 250px;
   height: 250px;
   object-fit: cover;
+  max-width: 100%;
 }
 
 .split-left img:hover {
@@ -65,6 +74,7 @@
   align-items: center;
   justify-content: center;
   box-shadow: 5px 0 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
 }
 
 .split-right h2 {
@@ -104,4 +114,92 @@ button {
 button:hover {
   transform: scale(1.02);
   transition: 0.3s ease-in-out;
+}
+
+/* Common container for forms */
+.form-container {
+  width: 90%;
+  max-width: 750px;
+  padding: 45px;
+  background-color: #ececec;
+  border-radius: 45px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 1024px) {
+  .split-left h1 {
+    font-size: 38px;
+  }
+
+  .split-right h2 {
+    font-size: 36px;
+  }
+  
+  .form-container {
+    padding: 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .split-left, .split-right {
+    position: relative;
+    width: 100%;
+    height: auto;
+    min-height: 100vh;
+  }
+  
+  .split-left {
+    padding: 60px 20px;
+  }
+  
+  .split-right {
+    padding: 60px 20px;
+  }
+  
+  .split-left img {
+    width: 200px;
+    height: 200px;
+    padding-top: 0;
+  }
+  
+  input {
+    width: 90%;
+    padding: 20px;
+  }
+  
+  .split-right h2 {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .form-container {
+    padding: 25px 15px;
+    width: 95%;
+    border-radius: 30px;
+  }
+  
+  .split-left h1 {
+    font-size: 32px;
+  }
+  
+  .split-right h2 {
+    font-size: 28px;
+  }
+  
+  input {
+    padding: 15px;
+    margin-bottom: 15px;
+    font-size: 16px;
+  }
+  
+  button {
+    padding: 12px 25px;
+    font-size: 16px;
+  }
 }
